add switcher for models

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,12 @@
 {
-  "compilerOptions": {
-    "module": "ES2022",
-    "target": "ES2022",
-    "strict": true,
-    "noImplicitOverride": true,
-    "strictNullChecks": false,
-    "esModuleInterop": true,
-    "moduleResolution": "node"
-  }
+    "compilerOptions": {
+        "module": "ES2022",
+        "target": "ES2022",
+        "strict": true,
+        "noImplicitOverride": true,
+        "strictNullChecks": false,
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "outDir": "dist"
+    }
 }
