--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@three.ez/main": "^0.5.7",
+    "lil-gui": "^0.19.2",
     "three": "^0.162.0"
   },
   "devDependencies": {
